Fix JavaFX runtime components error
Added module-info.java for proper JavaFX module support
Updated pom.xml with enhanced JavaFX plugin configuration
Added exec and shade plugins for easier execution
Created run.bat script for simple application launch
Updated README with detailed running instructions

This fixes the 'JavaFX runtime components are missing' error.